Finished the unanswered questions logic

--- a/static/css/learn/student/quizzes.css
+++ b/static/css/learn/student/quizzes.css
@@ -13,6 +13,14 @@
     font-family: 'Manrope', sans-serif;
 }
 
+.quiz-overview .statistics dd {
+    font-family: 'Clash Grotesk', sans-serif;
+}
+
+.quiz-overview .statistics dt {
+    font-family: 'Clash Grotesk', sans-serif;
+}
+
 
 /* CHAPTER RESULTS */
 .results-page-hero .comment {
